tests/pos/PlugHoles.hs
module PlugHoles where

{-@ (>>=) :: m a -> (a -> m b) -> m b @-}